--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prinberk High School</title>
-  <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
@@ -119,6 +119,6 @@
     </div>
   </footer>
 
-  <script src="js/transitions.js"></script>
+<script src="./js/transitions.js"></script>
 </body>
 </html>
